Fix mobile x overflow

--- a/src/App/App.scss
+++ b/src/App/App.scss
@@ -19,10 +19,6 @@
   &::-webkit-scrollbar-thumb {
     background: $color-tertiary;
   }
-
-  @include sm {
-    scroll-snap-type: y proximity;
-  }
 }
 
 .app-container {
@@ -30,7 +26,7 @@
   margin: auto auto;
 
   @include xl {
-    width: auto;
+    width: 100%;
     margin: 0;
   }
 }
